# FinSCRAPE

./: Cargo.toml  agent_conf.txt  cargo_test_writeup.txt  example_return.txt  fake_api.db  fake_frame.txt  frame_example.txt  multi.db  queue_RAM.db  test.db  test.db-journal  test.txt  test_conf.txt  test_timestamp.txt
src/: main.rs
