[package]
name = "FinSCRAPE"
version = "0.1.0"
authors = ["user"]
edition = "2018"

[dependencies]
reqwest = "0.9.9"
rusqlite = "0.16.0"
lettre = "0.8.3"
csv = "1.0.5"
serde_json = "1.0.38"
systemstat = "0.1.3"
serde = "1.0.87"
serde_derive = "1.0.87"

[dev-dependencies]
serial_test = "0.2.0"
serial_test_derive = "0.2.0"

